updated the css of each card to fix some of the spacing issues

--- a/sass/blocks/_program-card.scss
+++ b/sass/blocks/_program-card.scss
@@ -13,32 +13,62 @@
 		width: 100%;
 		transition: 0.3s;
 		object-fit: cover;
-		width: 100%;
-//height: 100%;
+		height: 100%;
 	}
  img,
  picture{
-	 //z-index:2;
 	 object-fit: cover;
 	 object-position: center;
 	 height: inherit;
-	 width: 100%
+	 width: 100%;
+	 position: absolute;
+	 top:0;
+	 left:0;
  }
  &.with-desc{
 	 img,
 	 picture{
-		 position: absolute;
-		 top:0;
-		 left:0;
-	 }
 
+	 }
+ min-height: 330px;
  }
+ &:not(.with-desc){
+	 min-height: 540px;
+ }
+ .card-header,
+ .card-body,
+ .card-button{
+	 z-index: 3;
+	 color: #fff;
+ }
+ .card-header{
+	 background-color: unset;
+	 margin-top: auto;
+flex-grow: initial;
+padding-bottom: 15px;
+	 &:not(.with-desc){
+		 width: 50%;
+		 overflow-wrap: normal;
+		 padding-bottom: 24px;
+	 }
+ }
+ .card-body{
+	 flex-grow: initial;
+padding-bottom: 10px;
+ }
+ .card-button{
+	     margin-top: 0;
+			 &:not(.with-desc){
+				 width: 45%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+		.btn{
+			float: right;
+		}
+			 }
+}
 	img.hover-image{
-		//display: none;
-		//position: absolute;
-		//top:0;
-		//left:0;
-    //z-index: 0;
 	}
 	picture:nth-of-type(1),
 	img:nth-of-type(1){
@@ -55,14 +85,14 @@
 		 top:0;
 		 left:0;
 	 }
-	 .card-content{
+	 /*.card-content{
  		position: absolute;
  		left: 0;
  		bottom:0;
-	}
+	}*/
 	}
 	.card-content{
-		display: table;
+	/*	display: table;
 		//position: absolute;
 		//left: 0;
 		//bottom:0;
@@ -82,13 +112,13 @@
 		display: block;
 		margin-bottom: 16px;
 		margin-top: 125px;
-	 }
+	}*/
 	}
 	p{
-		color:#fff;
+		//color:#fff;
 	}
 	.card-button{
-		    float: right;
+		/*    float: right;
 				padding-bottom: 0;
 				padding-right: 0;
 				padding-left: 5px;
@@ -96,7 +126,7 @@
 		     float:none;
 padding-left: 0px;
 		 	 }
-	}
+	}*/
 }
 &:after{
 	content: "";
